fix(java17): replace Thread.threadId() with getId() in supernode benchmark
Thread.threadId() is a JDK 21+ API. Use the JDK 17-compatible
Thread.getId() equivalent instead.